--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 project(MPC)
 
 cmake_minimum_required (VERSION 3.5)
-
 # -g allows for gdb debugging
 # turn on -03 for best performance
 add_definitions(-std=c++11 -O3)
@@ -10,6 +9,7 @@ set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS "${CXX_FLAGS}")
 
 set(sources src/MPC.cpp src/main.cpp)
+#set(sources src/MPC.cpp src/main.cpp src/matplotlibcpp.h)
 
 include_directories(/usr/local/include)
 link_directories(/usr/local/lib)
@@ -26,4 +26,5 @@ endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 add_executable(mpc ${sources})
 
 target_link_libraries(mpc ipopt z ssl uv uWS)
+#target_link_libraries(mpc ipopt z ssl uv uWS python2.7)
 
